...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/main_background"
    tools:context=".MainActivity">

    <com.example.groupstudyingapp.MovableFloatingActionButton
        android:id="@+id/addCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_add"
        app:backgroundTint="@color/purple"
        app:borderWidth="0dp"
        app:elevation="6dp"
...
